--- a/templates/form.html
+++ b/templates/form.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Predicción de Clase de Automóvil</title>
+</head>
+<body>
+  <h2>Formulario para predicción</h2>
+  <form action="/predict" method="post">
+    <label>Buying:</label>
+    <input type="text" name="buying"><br>
 
+    <label>Maint:</label>
+    <input type="text" name="maint"><br>
+
+    <label>Doors:</label>
+    <input type="text" name="doors"><br>
+
+    <label>Persons:</label>
+    <input type="text" name="persons"><br>
+
+    <label>Lug Boot:</label>
+    <input type="text" name="lug_boot"><br>
+
+    <label>Safety:</label>
+    <input type="text" name="safety"><br>
+
+    <button type="submit">Predecir</button>
+  </form>
+
+  {% if result %}
+    <h3>{{ result }}</h3>
+  {% endif %}
+</body>
+</html>
